# libgd

./: .clang-format  CMakeLists.txt  README.md  SECURITY.md  configure.ac
.github/workflows/: ci_ubuntu.yml  ci_windows.yml  ci_windows_mingw.yml
docs/: CMakeLists.txt  metadata.md
docs/naturaldocs/project/: Menu.txt
examples/: CMakeLists.txt  arc.c  avif2jpeg.c  copyrotated.c  crop.c  flip.c  gif.c  gif_frames.c  gif_rewrite.c  imagescale.c  jpeg2avif.c  jpeg2avifex.c  jxl_create_anim_vector.c  metadata_libexif.c  nnquant.c  png2avif.c  png2heif.c  resize.c  save_restore.c  scale_bench.c  text_curve.c  text_pattern.c  tgaread.c  tiff_pages.c  tiff_write_pages.c  tiffread.c  uhdr.c  webp_frames.c  webp_rewrite.c  windows.c
src/: CMakeLists.txt  Makefile.am  annotate.c  bmp.h  circletexttest.c  config.h.cmake  fontconfigtest.c  fontsizetest.c  fontwheeltest.c  gd.c  gd.h  gd2copypal.c  gd2time.c  gd2togif.c  gd2topng.c  gd_avif.c  gd_avif_metadata.c  gd_bmp.c  gd_color_match.c  gd_crop.c  gd_draw.c  gd_draw_blend.c  gd_errors.h  gd_filename.c  gd_filter.c  gd_gd.c  gd_gd2.c  gd_gif_in.c  gd_gif_out.c  gd_heif_metadata.c  gd_interesting.c  gd_intern.h  gd_interpolation.c  gd_io.c  gd_io_dp.c  gd_io_file.c  gd_io_ss.c  gd_io_stream.h  gd_jpeg.c  gd_jxl.c  (+54 more)
src/msinttypes/: inttypes.h  stdint.h
tests/: CMakeLists.txt
tests/avif/: avif_alpha.c  avif_im2im.c  avif_null.c  avif_ptr_double_free.c  bad_input.c  compare_avif_to_png.c
tests/bmp/: CMakeLists.txt  Makemodule.am  bmp_im2im.c  bmp_null.c  bmp_size.c  bmp_write_ex.c  bmpsuite_read.c  bug00275.c  bug00276.c  bug00450.c
tests/fontconfig/: CMakeLists.txt  basic.c
tests/freetype/: CMakeLists.txt  Makemodule.am  bug00132.c  charmap_selection.c
tests/gd/: bug00383.c  gd_im2im.c  gd_null.c  gd_num_colors.c  gd_versiontest.c
tests/gd2/: bug00209.c  bug00309.c  bug00354.c  bug00383.c  bug797.c  bug_289.c  createimagefromgd2part.c  createimagefromgd2partptr.c  gd2_empty_file.c  gd2_im2im.c  gd2_null.c  gd2_read.c  gd2_read_corrupt.c  php_bug_72339.c  too_few_image_data.c
tests/gdcolormaplookup/: gdcolormaplookup.c
tests/gdimageaffine/: CMakeLists.txt  edge.c  fractional.c  matrix.c  rotate.c  visual.c
tests/gdimagearc/: bug00079.c
tests/gdimagebrightness/: basic.c
tests/gdimageclone/: bug00300.c  polyInts.c  style.c
tests/gdimagecolor/: basic.c
tests/gdimagecolorclosest/: gdimagecolorclosest.c
tests/gdimagecolorclosesthwb/: gdImageColorClosestHWB.c
tests/gdimagecolordeallocate/: gdimagecolordeallocate.c
tests/gdimagecolorexact/: gdimagecolorexact.c
tests/gdimagecolormatch/: cve_2019_6977.c  gdimagecolormatch.c
tests/gdimagecolorreplace/: gdimagecolorreplace.c
tests/gdimagecolorresolve/: gdimagecolorresolve.c
tests/gdimagecolortransparent/: gdimagecolortransparent.c
tests/gdimagecompare/: gdimagecompare.c
tests/gdimagecontrast/: basic.c
tests/gdimageconvolution/: CMakeLists.txt  Makemodule.am  basic.c  bug00369.c  bug_php_019996.c
tests/gdimagecopy/: bug00007.c  bug00081.c
tests/gdimagecopymerge/: gdimagecopymerge.c
tests/gdimagecopymergegray/: gdimagecopymergegray.c
tests/gdimagecopyresampled/: basic.c  basic_alpha.c  bug00201.c  exact_alpha.c
tests/gdimagecopyresized/: gdimagecopyresized.c
tests/gdimagecopyrotated/: bug00020.c  bug00320.c  bug00981.c  bug00981_2.c
tests/gdimagecreate/: bug00340.c
tests/gdimagecrop/: CMakeLists.txt  Makemodule.am  autocrop_options.c  bug00297.c  bug00432.c  bug00485_auto.c  bug00485_threshold.c  bug00486.c  php_bug_72494.c
tests/gdimageellipse/: bug00169.c  bug00967.c
tests/gdimagefile/: gdnametest.c
tests/gdimagefill/: bug00002_1.c  bug00002_2.c  bug00002_3.c  bug00002_4.c  bug000991.c  bug00104_1.c
tests/gdimagefilledarc/: bug00351.c  php_bug43828.c
tests/gdimagefilledellipse/: bug00010.c  bug00169.c  bug00191.c  github_bug_00238.c
tests/gdimagefilledpolygon/: bug00100.c  gdimagefilledpolygon0.c  gdimagefilledpolygon1.c  gdimagefilledpolygon2.c  gdimagefilledpolygon3.c  php_bug_64641.c  self_intersecting.c
tests/gdimagefilledrectangle/: bug00004.c  bug00078.c  bug00106_gdimagefilledrectangle.c
tests/gdimagefilltoborder/: bug00037.c  github_bug_215.c
tests/gdimagefilter/: gdCopyBlurred.c  oob_case.c
tests/gdimageflip/: gdimageflip.c
tests/gdimagegrayscale/: basic.c  bug00386.c
tests/gdimageline/: bug00072.c  bug00077.c  bug00111.c  bug00315.c  gdImageAALine_thickness.c  gdimageline_aa.c  gdimageline_aa_outofrange.c  gdimageline_bug5.c  github_bug_167.c
tests/gdimagenegate/: basic.c
tests/gdimageopenpolygon/: gdimageopenpolygon0.c  gdimageopenpolygon1.c  gdimageopenpolygon2.c  gdimageopenpolygon3.c
tests/gdimagepixelate/: gdimagepixelate.c
tests/gdimagepolygon/: gdimagepolygon0.c  gdimagepolygon1.c  gdimagepolygon2.c  gdimagepolygon3.c
tests/gdimagerectangle/: bug00003.c  bug00106_gdimagerectangle.c  bug00299.c  github_bug_00172.c  point_ordering.c
tests/gdimagerotate/: CMakeLists.txt  Makemodule.am  bug00067.c  gd223.c  php_bug_64898.c  php_bug_65070.c  php_gh10614.c  uniform_transparent.c
tests/gdimagescale/: CMakeLists.txt  Makemodule.am  bug00329.c  bug00330.c  bug_overflow_large_new_size.c  github_bug_00218.c  options_content_aware.c  options_fit.c
tests/gdimagescatterex/: bug00208_1.c  bug00208_2.c
tests/gdimagesetinterpolationmethod/: github_bug_00584.c  github_bug_00847.c
tests/gdimagesetpixel/: alpha_blending.c  bug00186.c  gdeffectmultiply.c  gdeffectoverlay.c
tests/gdimagesquaretocircle/: gdimagesquaretocircle.c
tests/gdimagestring/: gdimagestring.c
tests/gdimagestring16/: gdimagestring16.c
tests/gdimagestringft/: bug00615.c  gdimagestringft_bbox.c
tests/gdimagestringftex/: gdimagestringftex_returnfontpathname.c
tests/gdimagestringup/: gdimagestringup.c
tests/gdimagestringup16/: gdimagestringup16.c
tests/gdimagetruecolortopalette/: CMakeLists.txt  Makemodule.am  bug00307.c  neuquant_palette_order.c  php_bug_67325.c  php_bug_72512.c  transparent_preserved.c
tests/metadata/: CMakeLists.txt  Makemodule.am  codec_metadata.c  jpeg_metadata.c  metadata_core.c  png_metadata.c
(+223 files in other folders)
